[package]
name = "teensy4-canfd"
version = "0.1.0"
authors = ["DavidTheFighter <19dallen@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/DavidTheFighter/t4-flexcan3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debuginfo = []

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.6.2"
embedded-hal = "0.2.3"
log = "0.4.11"

[dependencies.cortex-m-rt]
version = "0.6.13"
features = ["device"]  # For cortex_m_rt::interrupt support

[dependencies.imxrt-ral]
version = "0.4.0"
features = ["imxrt1062", "rt"] # "rt" flag optional

[dependencies.teensy4-bsp]
version = "0.1.0"

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
