[package]
name = "periodic-tx"
version = "0.1.0"
authors = ["DavidTheFighter <19dallen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.3"
log = "0.4.11"

[dependencies.teensy4-bsp]
version = "0.1.0"
features = ["usb-logging", "rt"]

[dependencies.teensy4-canfd]
path = "../../"

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0